--- a/unittests_in_js/package.json
+++ b/unittests_in_js/package.json
@@ -6,6 +6,7 @@
         "mocha": "^11.7.1"
     },
     "dependencies": {
-        "chai": "^6.0.1"
+        "chai": "^6.0.1",
+        "sinon": "^21.0.0"
     }
 }
