--- a/unittests_in_js/package.json
+++ b/unittests_in_js/package.json
@@ -3,7 +3,8 @@
         "test": "mocha"
     },
     "devDependencies": {
-        "mocha": "^11.7.1"
+        "mocha": "^11.7.1",
+        "supertest": "^7.1.4"
     },
     "dependencies": {
         "chai": "^6.0.1",
