--- a/unittests_in_js/9-api/package.json
+++ b/unittests_in_js/9-api/package.json
@@ -1,14 +1,21 @@
 {
-    "scripts": {
-        "test": "mocha"
-    },
-    "devDependencies": {
-        "mocha": "^11.7.1",
-        "supertest": "^7.1.4"
-    },
-    "dependencies": {
-        "chai": "^6.0.1",
-        "package.json": "^2.0.1",
-        "sinon": "^21.0.0"
-    }
+  "name": "8-api",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "./node_modules/mocha/bin/mocha"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^5.1.2",
+    "mocha": "^6.2.3",
+    "request": "^2.88.0",
+    "sinon": "^7.5.0"
+  }
 }
