--- a/unittests_in_js/10-api/package.json
+++ b/unittests_in_js/10-api/package.json
@@ -8,6 +8,9 @@
     },
     "dependencies": {
         "chai": "^6.0.1",
+        "dependencies": "^0.0.1",
+        "express": "^5.1.0",
+        "package": "^1.0.1",
         "package.json": "^2.0.1",
         "sinon": "^21.0.0"
     }
